@@ -93,7 +93,7 @@ Parses URIs as described in [RFC-3986](https://tools.ietf.org/html/rfc3986).
   - `mailbox` (pattern): the mailbox format: matches either `name_addr` or an addr-spec.
   - `name_addr` (pattern): the name and address format i.e. `Display Name<email@example.com>`
     Has captures of the local_part and the domain. Captures the display name in the named capture `"display"`
-  - `email` (pattern): also known as an "addr-spec"; follows [RFC-5322 section 3.4.1](http://tools.ietf.org/html/rfc5322#section-3.4.1)
+  - `email` (pattern): also known as an "addr-spec"; follows [RFC-5322 section 3.4.1](http://tools.ietf.org/html/rfc5322#section-3.4.1) with the internationalisation extensions from [RFC-6532 section 3.1](http://tools.ietf.org/html/rfc6532#section-3.1)
     Has captures of the local_part and the domain
     Be careful trying to reconstruct the email address from the captures; you may need escaping
   - `local_part` (pattern): the bit before the `@` in an email address
